--- a/po/bg.po
+++ b/po/bg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-23 20:42+0000\n"
-"Last-Translator: Recku <reckku@gmail.com>\n"
+"PO-Revision-Date: 2013-11-09 00:01+0000\n"
+"Last-Translator: Радослав <reckku@gmail.com>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
 "X-Poedit-Bookmarks: -1,59,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-POOTLE-MTIME: 1379968948.0\n"
+"X-POOTLE-MTIME: 1383955316.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -121,7 +121,7 @@ msgstr "с този файл?"
 
 #: ../data/ui/choose-icon.ui.h:1
 msgid "<b>Choose icon from:</b>"
-msgstr "<b>_Избор на икона от:</b>"
+msgstr "<b>Избор на икона от:</b>"
 
 #: ../data/ui/choose-icon.ui.h:2
 msgid "Choose An Icon..."
