--- a/po/lt.po
+++ b/po/lt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 22:15+0100\n"
-"PO-Revision-Date: 2013-09-03 19:00+0200\n"
+"PO-Revision-Date: 2013-11-14 06:33+0200\n"
 "Last-Translator: Algimantas Margevičius <margevicius.algimantas@gmail.com>\n"
 "Language-Team: Lietuvių <>\n"
 "Language: lt\n"
@@ -32,12 +32,10 @@ msgid "Create new or change existing desktop entry"
 msgstr "Sukurti naują ar keisti esamą darbastalio įrašą"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
 msgstr "Pasirinkite programą"
 
 #: ../data/ui/app-chooser.glade.h:2
-#, fuzzy
 msgid "<b>File type to be opened:</b>"
 msgstr "<b>Atveriamo failo tipas:</b>"
 
@@ -94,9 +92,8 @@ msgid "_Set selected application as default action of this file type"
 msgstr "_Pasirinkite programą su kuria bus atveriami šio tipo failai"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
-msgstr "Patvirtinti failų pakeitimą"
+msgstr "Patvirtintikite failų pakeitimą"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
@@ -125,7 +122,6 @@ msgid "with the following file?"
 msgstr "šiuo failu?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
 msgstr "_Failo pavadinimas:"
 
@@ -180,7 +176,6 @@ msgid "<b>Target file:</b>"
 msgstr "<b>Paskirties failas:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
 msgstr "<b>Failo tipas:</b>"
 
@@ -193,27 +188,22 @@ msgid "Select the application used to open files of this type "
 msgstr "Pasirinkite programą su kuria bus atveriami tokio tipo failai"
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total size of files:</b>"
 msgstr "<b>Visų failų dydis:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Size on disk:</b>"
 msgstr "<b>Dydis diske:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Last modification:</b>"
 msgstr "<b>Paskutinį kartą pakeista:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last access:</b>"
 msgstr "<b>Paskutinį kartą naudota:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
 msgstr "<b>Paskutinį kartą keistos teisės:</b>"
 
@@ -338,7 +328,6 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
 msgstr "Pasirinkite datą"
 
@@ -466,12 +455,10 @@ msgstr ""
 "adresams."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
 msgstr "<b>Pašto klientas</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
@@ -549,7 +536,7 @@ msgstr "Nėra numatytosios programos MIME tipui „%s“"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "Įrenginiai"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -718,9 +705,8 @@ msgid "Installed Applications"
 msgstr "Įdiegtos programos"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1205
-#, fuzzy
 msgid "<No subfolders>"
-msgstr "<Jokio poaplankio>"
+msgstr "<Jokių poaplankių>"
 
 #: ../src/gtk/fm-dir-tree-model.c:422 ../src/gtk/fm-dir-tree-model.c:1206
 msgid "Loading..."
@@ -735,20 +721,17 @@ msgid "_Cancel"
 msgstr "_Atsisakyti"
 
 #: ../src/gtk/fm-dnd-dest.c:412
-#, fuzzy
 msgid "C_opy Here"
-msgstr "_Kopijuoti"
+msgstr "_Kopijuoti čia"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "_Move Here"
-msgstr "Perkelti _kairėn"
+msgstr "_Perkelti čia"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
-#, fuzzy
 msgid "_Link Here"
-msgstr "_Nuoroda"
+msgstr "_Kurti nuorodą čia"
 
 #: ../src/gtk/fm-dnd-dest.c:861
 msgid "XDirectSave failed."
@@ -792,9 +775,8 @@ msgstr "_Savybės"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:261 ../src/gtk/fm-file-menu.c:521
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Perkelti _dešinėn"
+msgstr "Perkelti _šiukšlinėn"
 
 #: ../src/gtk/fm-file-properties.c:364
 msgid "Image files"
@@ -852,7 +834,6 @@ msgid "<b>File:</b>"
 msgstr "<b>Failas:</b>"
 
 #: ../src/gtk/fm-file-properties.c:1307
-#, fuzzy
 msgid "Multiple files"
 msgstr "Keli failai"
 
@@ -919,12 +900,10 @@ msgstr "Rodyti _paslėptus"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
 msgstr "_Sulieti failus ir aplankus"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
 msgstr "_Nepaisyti pavadinimo raidžių dydžio"
 
@@ -949,7 +928,6 @@ msgid "Enter a name for the newly created folder:"
 msgstr "Įveskite naujo aplanko vardą:"
 
 #: ../src/gtk/fm-folder-view.c:848
-#, fuzzy
 msgid "Creating New Folder"
 msgstr "Kuriamas naujas aplankas"
 
@@ -999,7 +977,6 @@ msgid "No folders are specified."
 msgstr "Nenurodyta aplankų."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:691 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
 msgstr "Pasirinkite aplanką"
 
@@ -1058,19 +1035,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Ar tikrai norite ištuštinti šiukšlinę?"
 
 #: ../src/gtk/fm-path-entry.c:631
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "Į_klijuoti ir pirmyn"
 
 #: ../src/gtk/fm-path-entry.c:690
-#, fuzzy
 msgid "Folder location bar"
-msgstr "Failų sąsajos"
+msgstr "Aplanko vietos juosta"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "_Pervadinti aplanką"
+msgstr "Namų aplankas"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1082,9 +1056,8 @@ msgid "Applications"
 msgstr "Programos"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Failų sistema"
+msgstr "Failų sistemos šakninis aplankas"
 
 #: ../src/gtk/fm-places-view.c:124
 msgid "_Mount Volume"
@@ -1197,32 +1170,26 @@ msgid ", "
 msgstr ","
 
 #: ../src/gtk/fm-progress-dlg.c:560
-#, fuzzy
 msgid "Moving Files"
 msgstr "Perkeliami failai"
 
 #: ../src/gtk/fm-progress-dlg.c:563
-#, fuzzy
 msgid "Copying Files"
 msgstr "Kopijuojami failai"
 
 #: ../src/gtk/fm-progress-dlg.c:566
-#, fuzzy
 msgid "Trashing Files"
 msgstr "Failai siunčiami į šiukšlinę"
 
 #: ../src/gtk/fm-progress-dlg.c:569
-#, fuzzy
 msgid "Deleting Files"
 msgstr "Šalinami failai"
 
 #: ../src/gtk/fm-progress-dlg.c:572
-#, fuzzy
 msgid "Creating Symlinks"
 msgstr "Kuriamos simbolinės nuorodos"
 
 #: ../src/gtk/fm-progress-dlg.c:575
-#, fuzzy
 msgid "Changing File Attributes"
 msgstr "Keičiami failo atributai"
 
@@ -1260,12 +1227,10 @@ msgid "_Hide %s"
 msgstr "_Slėpti %s"
 
 #: ../src/gtk/fm-standard-view.c:821
-#, fuzzy
 msgid "_Move Left"
 msgstr "Perkelti _kairėn"
 
 #: ../src/gtk/fm-standard-view.c:827
-#, fuzzy
 msgid "Move _Right"
 msgstr "Perkelti _dešinėn"
 
@@ -1275,7 +1240,6 @@ msgid "Show %s"
 msgstr "Rodyti %s"
 
 #: ../src/gtk/fm-standard-view.c:862
-#, fuzzy
 msgid "_Forget Width"
 msgstr "_Pamiršti plotį"
 
@@ -1458,12 +1422,10 @@ msgid "Search"
 msgstr "Ieškoti"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search Results"
 msgstr "Paieškos rezultatai"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Pasirinkite vykdomąjį failą"
 
@@ -1510,7 +1472,6 @@ msgid "_Use startup notification"
 msgstr "_Naudoti pranešimą apie paleidimą"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "_Darbastalio įrašas"
 
